[package]
name = "rtc-r"
version = "0.1.0"
edition = "2024"


[dependencies]
bcrypt = "0.17"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20" }
stun = { version = "0.7.0" }
turn = { version = "0.9.0" }
