[package]
name = "rtc-r"
version = "0.1.0"
edition = "2024"
default-run = "rtc-r"

[dependencies]
bcrypt = "0.17"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
url = "2.3"
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.4", features = ["fs"] }
axum = { version = "0.8.4", features = ["ws"] }
turn-server = { version = "3.4.0", features = ["udp"] }
async-trait = "0.1.88"


[dev-dependencies]
reqwest = "0.12.15"
