[package]
name = "rtc-r"
version = "0.1.0"
edition = "2024"
default-run = "rtc-r"

[dependencies]
bcrypt = "0.17"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
url = "2.3"
tower-http = { version = "0.6.4", features = ["fs"] }
axum = { version = "0.8.4", features = ["ws"] }
turn-server = "3.4.0"


[dev-dependencies]
bytes = "1.3"
anyhow = "1.0"
rand = "0.8"
reqwest = "0.12.15"
tokio-tungstenite = "0.26.2"
